New table to manage gmail_address, then for each user will be possible to have two mail addresses: the MantisBT standard will be used for the standard MantisBT behaviour and the new additional gmail address will be used for Google oAuth if the standard MantisBT user's email field is not populated with a gmail address.

--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -21,4 +21,4 @@ $s_plugin_GoogleOauth_user_is_enabled_failure_action = $s_action_common;
 
 $s_plugin_GoogleOauth_user_is_login_request_allowed_failure_action =$s_action_common;
 
-$s_plugin_GoogleOauth_mailForOauth = 'Mail to use for Oauth';
+$s_plugin_GoogleOauth_gmail_address = 'Gmail Address';
